Standarisasi Kolom Numerik

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -410,6 +410,277 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>9. Standarisasi Kolom Numerik</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistik Deskriptif Sebelum Standardisasi : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Umur</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>37.50</td>\n",
+       "      <td>1.467366e+01</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>49.75</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>7069874.82</td>\n",
+       "      <td>2.590619e+06</td>\n",
+       "      <td>2722700.0</td>\n",
+       "      <td>5257529.75</td>\n",
+       "      <td>5980077.0</td>\n",
+       "      <td>9739615.00</td>\n",
+       "      <td>10884508.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count        mean           std        min         25%  \\\n",
+       "Umur                  50.0       37.50  1.467366e+01       14.0       25.00   \n",
+       "NilaiBelanjaSetahun   50.0  7069874.82  2.590619e+06  2722700.0  5257529.75   \n",
+       "\n",
+       "                           50%         75%         max  \n",
+       "Umur                      35.0       49.75        64.0  \n",
+       "NilaiBelanjaSetahun  5980077.0  9739615.00  10884508.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistik Deskriptif Setelah Standardisasi : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Umur</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.6</td>\n",
+       "      <td>-0.9</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.7</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count  mean  std  min  25%  50%  75%  max\n",
+       "Umur                  50.0  -0.0  1.0 -1.6 -0.9 -0.2  0.8  1.8\n",
+       "NilaiBelanjaSetahun   50.0  -0.0  1.0 -1.7 -0.7 -0.4  1.0  1.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan 5 data teratas : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.411245</td>\n",
+       "      <td>0.946763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.617768</td>\n",
+       "      <td>-1.695081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.722833</td>\n",
+       "      <td>-0.695414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.067039</td>\n",
+       "      <td>-0.727361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.240944</td>\n",
+       "      <td>1.382421</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Umur  NilaiBelanjaSetahun\n",
+       "0  1.411245             0.946763\n",
+       "1 -1.617768            -1.695081\n",
+       "2  0.722833            -0.695414\n",
+       "3  1.067039            -0.727361\n",
+       "4  0.240944             1.382421"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Library yang digunakan untuk standardisasi\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Menyiapkan kolom numerik\n",
+    "kolom_numerik = ['Umur','NilaiBelanjaSetahun']\n",
+    "\n",
+    "# Menampilkan Statistik Deskriptif Sebelum Dilakukan Standardisasi\n",
+    "print(f\"Statistik Deskriptif Sebelum Standardisasi : \\n\")\n",
+    "display(df.describe().T)\n",
+    "\n",
+    "# Inisiasi Standard Scaler\n",
+    "std_scaler = StandardScaler()\n",
+    "\n",
+    "# Standardisasi kolom numerik\n",
+    "df_std = std_scaler.fit_transform(df[kolom_numerik])\n",
+    "\n",
+    "# Membuat DataFrame\n",
+    "df_std = pd.DataFrame(data=df_std, index=df.index, columns=df[kolom_numerik].columns)\n",
+    "\n",
+    "# Menampilkan Statistik Deskriptif Setelah Dilakukan Standardisasi\n",
+    "print(f\"Statistik Deskriptif Setelah Standardisasi : \\n\")\n",
+    "display(df_std.describe().round(1).T)\n",
+    "\n",
+    "# Menampilkan 5 data teratas\n",
+    "print(f\"Menampilkan 5 data teratas : \\n\")\n",
+    "display(df_std.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>8. Apa itu <strong>Clustering</strong> dan Algoritma <strong>K-Prototype</strong></h2>\n",
     "<ul>\n",
     "  <li><strong>Clustering</strong> : Proses pembagian objek - objek ke dalam beberapa kelompok (cluster) berdasarkan tingkat kemiripan antara sati objek dengan yang lain</li>\n",
