Standarisasi Kolom Numerik

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -410,7 +410,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>9. Standarisasi Kolom Numerik</h2>"
+    "<h2>9. Standarisasi Kolom Numerik</h2>\n",
+    "<ul>\n",
+    "  <li>Standarisasi: Proses transformasi data numerik agar memiliki distribusi yang seragam</li>\n",
+    "  <li>StandardScaler: Metode yang digunakan untuk transformasi data numerik agar memiliki distribusi seragam dengan nilai <strong>Mean</strong> = <strong>0</strong> dan <strong>Standar Deviasi</strong> = <strong>1</strong></li>\n",
+    "</ul>"
    ]
   },
   {
