Konversi Data Kategorikal Menjadi Data Numerik Unik Menggunakan Metode LabelEncoder

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -685,6 +685,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>10. Konversi Kategorikal Data dengan Label Encoder</h2>\n",
+    "<ul>\n",
+    "  <li>Konversi Kategorikal: Konversi data berbentuk kategori atau label menjadi bentuk numerik agar dapat diproses oleh algoritma Machine Learning</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memproses kolom: Jenis Kelamin ...\n",
+      "Sebelum transformasi : Jenis Kelamin \n",
+      "\n",
+      "['Pria' 'Wanita']\n",
+      "Nilai unik setelah encoding: [0 1]\n",
+      "Kolom Jenis Kelamin telah di-encode.\n",
+      "\n",
+      "Memproses kolom: Profesi ...\n",
+      "Sebelum transformasi : Profesi \n",
+      "\n",
+      "['Wiraswasta' 'Pelajar' 'Professional' 'Ibu Rumah Tangga' 'Mahasiswa']\n",
+      "Nilai unik setelah encoding: [4 2 3 0 1]\n",
+      "Kolom Profesi telah di-encode.\n",
+      "\n",
+      "Memproses kolom: Tipe Residen ...\n",
+      "Sebelum transformasi : Tipe Residen \n",
+      "\n",
+      "['Sector' 'Cluster']\n",
+      "Nilai unik setelah encoding: [1 0]\n",
+      "Kolom Tipe Residen telah di-encode.\n",
+      "\n",
+      "Menampilkan 5 data teratas : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Jenis Kelamin  Profesi  Tipe Residen\n",
+       "0              0        4             1\n",
+       "1              1        2             0\n",
+       "2              0        3             0\n",
+       "3              0        3             0\n",
+       "4              1        4             0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Library yang digunakan untuk Konversi Categorical ke Numerical\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Menyiapkan kolom kategorikal\n",
+    "kolom_kategorikal = ['Jenis Kelamin', 'Profesi', 'Tipe Residen']\n",
+    "\n",
+    "# Membuat salinan data frame\n",
+    "df_encode = df[kolom_kategorikal].copy()\n",
+    "\n",
+    "# Melakukan label encoder untuk semua kolom kategorikal\n",
+    "for i in kolom_kategorikal:\n",
+    "    print(f\"Memproses kolom: {i} ...\")\n",
+    "\n",
+    "    # Menampilkan nilai unik sebelum transformasi\n",
+    "    print(f\"Sebelum transformasi : {i} \\n\")\n",
+    "    print(df_encode[i].unique())\n",
+    "\n",
+    "    # Melakukan label encoder\n",
+    "    df_encode[i] = LabelEncoder().fit_transform(df_encode[i])\n",
+    "\n",
+    "    # Menampilkan nilai unik setelah encoding\n",
+    "    print(f\"Nilai unik setelah encoding: {df_encode[i].unique()}\")\n",
+    "    print(f\"Kolom {i} telah di-encode.\\n\")\n",
+    "\n",
+    "# Menampilkan 5 data teratas\n",
+    "print(f\"Menampilkan 5 data teratas : \\n\")\n",
+    "display(df_encode.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0      1  2        3\n",
+      "0  1  Alice  3  Charlie\n",
+      "1  2    Bob  4    David\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame({'id': [1, 2], 'name': ['Alice', 'Bob']})\n",
+    "df2 = pd.DataFrame({'id': [3, 4], 'name': ['Charlie', 'David']})\n",
+    "\n",
+    "# Concatenate\n",
+    "result = pd.concat([df1, df2], axis=1, ignore_index=True)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>8. Apa itu <strong>Clustering</strong> dan Algoritma <strong>K-Prototype</strong></h2>\n",
     "<ul>\n",
     "  <li><strong>Clustering</strong> : Proses pembagian objek - objek ke dalam beberapa kelompok (cluster) berdasarkan tingkat kemiripan antara sati objek dengan yang lain</li>\n",
