Membuat & Menyimpan Model

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -1100,6 +1100,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>14. Membuat Model</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informasi Data:\n",
+      "Jumlah Baris: 50\n",
+      "Jumlah Kolom: 5\n",
+      "5 Baris Pertama Data:\n",
+      "   Jenis Kelamin  Profesi  Tipe Residen      Umur  NilaiBelanjaSetahun\n",
+      "0              0        4             1  1.411245             0.946763\n",
+      "1              1        2             0 -1.617768            -1.695081\n",
+      "2              0        3             0  0.722833            -0.695414\n",
+      "3              0        3             0  1.067039            -0.727361\n",
+      "4              1        4             0  0.240944             1.382421\n",
+      "\n",
+      "Memulai Pemodelan K-Prototypes...\n",
+      "Melatih model dengan 5 cluster...\n",
+      "Model telah selesai dilatih!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Library\n",
+    "import pickle\n",
+    "from kmodes.kprototypes import KPrototypes\n",
+    "\n",
+    "# Informasi tentang data\n",
+    "print(\"Informasi Data:\")\n",
+    "print(f\"Jumlah Baris: {df_model.shape[0]}\")\n",
+    "print(f\"Jumlah Kolom: {df_model.shape[1]}\")\n",
+    "print(\"5 Baris Pertama Data:\")\n",
+    "print(df_model.head())\n",
+    "\n",
+    "# Pemodelan K-Prototypes\n",
+    "print(\"\\nMemulai Pemodelan K-Prototypes...\")\n",
+    "n_clusters = 5  # Jumlah cluster\n",
+    "random_state = 42  # Random seed untuk reproducibility\n",
+    "categorical_columns = [0, 1, 2]  # Indeks kolom kategorikal\n",
+    "\n",
+    "# Inisialisasi model\n",
+    "model_kproto = KPrototypes(n_clusters=n_clusters, random_state=random_state)\n",
+    "\n",
+    "# Training model\n",
+    "print(f\"Melatih model dengan {n_clusters} cluster...\")\n",
+    "model_kproto.fit(df_model, categorical=categorical_columns)\n",
+    "print(\"Model telah selesai dilatih!\")\n",
+    "\n",
+    "# Save Model\n",
+    "pickle.dump(model_kproto, open('cluster_model.pkl', 'wb'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
