--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -1163,6 +1163,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>15. Menggunakan Model</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hasil Prediksi Cluster:\n",
+      "[0 2 3 3 4 1 0 3 1 1 3 3 0 0 4 1 1 3 4 2 4 3 1 4 4 3 4 1 3 3 2 0 2 4 1 4 1\n",
+      " 0 1 2 1 4 1 4 1 4 3 0 1 0]\n",
+      "\n",
+      "5 Data Teratas Bersama Cluster:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Nama Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CUST-001</td>\n",
+       "      <td>Budi Anggara</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Sector</td>\n",
+       "      <td>9497927</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CUST-002</td>\n",
+       "      <td>Shirley Ratuwati</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Pelajar</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>2722700</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CUST-003</td>\n",
+       "      <td>Agus Cahyono</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5286429</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CUST-004</td>\n",
+       "      <td>Antonius Winarta</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5204498</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CUST-005</td>\n",
+       "      <td>Ibu Sri Wahyuni, IR</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>10615206</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Customer_ID       Nama Pelanggan Jenis Kelamin  Umur       Profesi  \\\n",
+       "0    CUST-001         Budi Anggara          Pria    58    Wiraswasta   \n",
+       "1    CUST-002     Shirley Ratuwati        Wanita    14       Pelajar   \n",
+       "2    CUST-003         Agus Cahyono          Pria    48  Professional   \n",
+       "3    CUST-004     Antonius Winarta          Pria    53  Professional   \n",
+       "4    CUST-005  Ibu Sri Wahyuni, IR        Wanita    41    Wiraswasta   \n",
+       "\n",
+       "  Tipe Residen  NilaiBelanjaSetahun  cluster  \n",
+       "0       Sector              9497927        0  \n",
+       "1      Cluster              2722700        2  \n",
+       "2      Cluster              5286429        3  \n",
+       "3      Cluster              5204498        3  \n",
+       "4      Cluster             10615206        4  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Menentukan cluster untuk setiap pelanggan\n",
+    "hasil_cluster = model_kproto.predict(df_model, categorical=categorical_columns)\n",
+    "print(\"\\nHasil Prediksi Cluster:\")\n",
+    "print(hasil_cluster)\n",
+    "\n",
+    "# Membuat DataFrame hasil cluster\n",
+    "df_final = df.copy()\n",
+    "df_final['cluster'] = hasil_cluster\n",
+    "\n",
+    "# Menampilkan 5 data teratas\n",
+    "print(\"\\n5 Data Teratas Bersama Cluster:\")\n",
+    "display(df_final.head())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
