Ringkasan Visualisasi Data Numerik Berdasarkan Cluster Untuk Mengetahui Distribusi Data Untuk Setiap Cluster

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2312,10 +2312,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h3>Ringkasan Hasil Visualisasi Data Numerik Untuk Setiap Cluster</h3>\n",
+    "<ol>\n",
+    "  <li>Distribusi Data Umur</li>\n",
+    "  <ul>\n",
+    "    <li>Distribusi Data Umur Terbagi <strong>3 Domain</strong></li>\n",
+    "    <ol>\n",
+    "      <li><strong>Young</strong> : Mean = 16,40 Tahun</li>\n",
+    "      <li><strong>Adult</strong> : Mean = 29,50 Tahun & Mean = 30,07 Tahun</li>\n",
+    "      <li><strong>Old</strong> : Mean = 52,64 Tahun & Mean = 54,88 Tahun</li>\n",
+    "    </ol>\n",
+    "  </ul>\n",
+    "  <li>Distribusi Nilai Belanja Setahun</li>\n",
+    "  <ul>\n",
+    "    <li>Distribusi Nilai Belanja Setahun <strong>3 Domain</strong></li>\n",
+    "    <ol>\n",
+    "      <li><strong>Silver</strong> : Mean = 2.914.419,8</li>\n",
+    "      <li><strong>Gold</strong> : Mean = 5.452.323,73 & Mean = 5.625.972,07</li>\n",
+    "      <li><strong>Diamond</strong> : Mean = 9.995.179,00 & Mean = 10.030.040,50</li>\n",
+    "    </ol>\n",
+    "  </ul>\n",
+    "</ol>\n",
+    "<h4>=============================================================================</h4>\n",
+    "<ol>\n",
+    "  <li>Distribusi Data Umur Berdasarkan <strong>Cluster</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Distribusi Data Umur Jika dibagi Berdasarkan <strong>5 Cluster</strong></li>\n",
+    "    <ol>\n",
+    "      <li><strong>Cluster 0</strong> : Umur ---> Domain <strong>Old</strong></li>\n",
+    "      <li><strong>Cluster 1</strong> : Umur ---> Domain <strong>Adult</strong></li>\n",
+    "      <li><strong>Cluster 2</strong> : Umur ---> Domain <strong>Young</strong></li>\n",
+    "      <li><strong>Cluster 3</strong> : Umur ---> Domain <strong>Old</strong></li>\n",
+    "      <li><strong>Cluster 4</strong> : Umur ---> Domain <strong>Adult</strong></li>\n",
+    "    </ol>\n",
+    "  </ul>\n",
+    "<li>Distribusi Data Nilai Belanja Setahun Berdasarkan <strong>Cluster</strong></li>\n",
+    "  <ul>\n",
+    "    <li>Distribusi Data Nilai Belanja Setahun Jika dibagi Berdasarkan <strong>5 Cluster</strong></li>\n",
+    "    <ol>\n",
+    "      <li><strong>Cluster 0</strong> : Nilai Belanja Setahun ---> Domain <strong>Diamond</strong></li>\n",
+    "      <li><strong>Cluster 1</strong> : Nilai Belanja Setahun ---> Domain <strong>Gold</strong></li>\n",
+    "      <li><strong>Cluster 2</strong> : Nilai Belanja Setahun ---> Domain <strong>Silver</strong></li>\n",
+    "      <li><strong>Cluster 3</strong> : Nilai Belanja Setahun ---> Domain <strong>Gold</strong></li>\n",
+    "      <li><strong>Cluster 4</strong> : Nilai Belanja Setahun ---> Domain <strong>Diamond</strong></li>\n",
+    "    </ol>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
