Ringkasan Hasil Visualisasi Data Kategorikal Untuk Setiap Cluster

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2342,10 +2342,10 @@
     "  <ul>\n",
     "    <li>Distribusi Data Umur Jika dibagi Berdasarkan <strong>5 Cluster</strong></li>\n",
     "    <ol>\n",
-    "      <li><strong>Cluster 0</strong> : Umur ---> Domain <strong>Old</strong></li>\n",
+    "      <li><strong>Cluster 0</strong> : Umur ---> Domain <strong>Senior</strong></li>\n",
     "      <li><strong>Cluster 1</strong> : Umur ---> Domain <strong>Adult</strong></li>\n",
     "      <li><strong>Cluster 2</strong> : Umur ---> Domain <strong>Young</strong></li>\n",
-    "      <li><strong>Cluster 3</strong> : Umur ---> Domain <strong>Old</strong></li>\n",
+    "      <li><strong>Cluster 3</strong> : Umur ---> Domain <strong>Senior</strong></li>\n",
     "      <li><strong>Cluster 4</strong> : Umur ---> Domain <strong>Adult</strong></li>\n",
     "    </ol>\n",
     "  </ul>\n",
