--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2477,6 +2477,328 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>19. Menamakan Cluster</h2>\n",
+    "<ul>\n",
+    "  <li>Menamakan Cluster Berdasarkan Ringkasan Visualisasi Data Numerik & Data Kategorikal</li>\n",
+    "    <ol>\n",
+    "      <li><strong>Cluster 0</strong> : Diamond Senior Enterpreneur Member</li>\n",
+    "      <li><strong>Cluster 1</strong> : Gold Adults Freelance Member</li>\n",
+    "      <li><strong>Cluster 2</strong> : Silver Young Student Member</li>\n",
+    "      <li><strong>Cluster 3</strong> : Gold Senior Freelance Member</li>\n",
+    "      <li><strong>Cluster 4</strong> : Diamond Adults Enterpreneur Member</li>\n",
+    "    </ol>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan 5 Data Teratas : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Nama Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CUST-001</td>\n",
+       "      <td>Budi Anggara</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Sector</td>\n",
+       "      <td>9497927</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CUST-002</td>\n",
+       "      <td>Shirley Ratuwati</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Pelajar</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>2722700</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CUST-003</td>\n",
+       "      <td>Agus Cahyono</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5286429</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CUST-004</td>\n",
+       "      <td>Antonius Winarta</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5204498</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CUST-005</td>\n",
+       "      <td>Ibu Sri Wahyuni, IR</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>10615206</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Customer_ID       Nama Pelanggan Jenis Kelamin  Umur       Profesi  \\\n",
+       "0    CUST-001         Budi Anggara          Pria    58    Wiraswasta   \n",
+       "1    CUST-002     Shirley Ratuwati        Wanita    14       Pelajar   \n",
+       "2    CUST-003         Agus Cahyono          Pria    48  Professional   \n",
+       "3    CUST-004     Antonius Winarta          Pria    53  Professional   \n",
+       "4    CUST-005  Ibu Sri Wahyuni, IR        Wanita    41    Wiraswasta   \n",
+       "\n",
+       "  Tipe Residen  NilaiBelanjaSetahun  cluster  \n",
+       "0       Sector              9497927        0  \n",
+       "1      Cluster              2722700        2  \n",
+       "2      Cluster              5286429        3  \n",
+       "3      Cluster              5204498        3  \n",
+       "4      Cluster             10615206        4  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan 5 Data Teratas : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Nama Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>segmen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CUST-001</td>\n",
+       "      <td>Budi Anggara</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Sector</td>\n",
+       "      <td>9497927</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Diamond Senior Enterpreneur Member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CUST-002</td>\n",
+       "      <td>Shirley Ratuwati</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Pelajar</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>2722700</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Silver Young Student Member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CUST-003</td>\n",
+       "      <td>Agus Cahyono</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5286429</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Gold Senior Freelance Member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CUST-004</td>\n",
+       "      <td>Antonius Winarta</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>5204498</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Gold Senior Freelance Member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CUST-005</td>\n",
+       "      <td>Ibu Sri Wahyuni, IR</td>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>10615206</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Diamond Adults Enterpreneur Member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Customer_ID       Nama Pelanggan Jenis Kelamin  Umur       Profesi  \\\n",
+       "0    CUST-001         Budi Anggara          Pria    58    Wiraswasta   \n",
+       "1    CUST-002     Shirley Ratuwati        Wanita    14       Pelajar   \n",
+       "2    CUST-003         Agus Cahyono          Pria    48  Professional   \n",
+       "3    CUST-004     Antonius Winarta          Pria    53  Professional   \n",
+       "4    CUST-005  Ibu Sri Wahyuni, IR        Wanita    41    Wiraswasta   \n",
+       "\n",
+       "  Tipe Residen  NilaiBelanjaSetahun  cluster  \\\n",
+       "0       Sector              9497927        0   \n",
+       "1      Cluster              2722700        2   \n",
+       "2      Cluster              5286429        3   \n",
+       "3      Cluster              5204498        3   \n",
+       "4      Cluster             10615206        4   \n",
+       "\n",
+       "                               segmen  \n",
+       "0  Diamond Senior Enterpreneur Member  \n",
+       "1         Silver Young Student Member  \n",
+       "2        Gold Senior Freelance Member  \n",
+       "3        Gold Senior Freelance Member  \n",
+       "4  Diamond Adults Enterpreneur Member  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informasi Dataset : \n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50 entries, 0 to 49\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Customer_ID          50 non-null     object\n",
+      " 1   Nama Pelanggan       50 non-null     object\n",
+      " 2   Jenis Kelamin        50 non-null     object\n",
+      " 3   Umur                 50 non-null     int64 \n",
+      " 4   Profesi              50 non-null     object\n",
+      " 5   Tipe Residen         50 non-null     object\n",
+      " 6   NilaiBelanjaSetahun  50 non-null     int64 \n",
+      " 7   cluster              50 non-null     uint16\n",
+      " 8   segmen               50 non-null     object\n",
+      "dtypes: int64(2), object(6), uint16(1)\n",
+      "memory usage: 3.4+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Menampilkan 5 Data Teratas\n",
+    "print(f\"Menampilkan 5 Data Teratas : \\n\")\n",
+    "display(df_final.head())\n",
+    "\n",
+    "# Menamakan Cluster\n",
+    "df_final['segmen'] = df_final['cluster'].map({\n",
+    "    0: 'Diamond Senior Enterpreneur Member',\n",
+    "    1: 'Gold Adults Freelance Member',\n",
+    "    2: 'Silver Young Student Member',\n",
+    "    3: 'Gold Senior Freelance Member',\n",
+    "    4: 'Diamond Adults Enterpreneur Member'\n",
+    "})\n",
+    "\n",
+    "# Menampilkan 5 Data Teratas\n",
+    "print(f\"Menampilkan 5 Data Teratas : \\n\")\n",
+    "display(df_final.head())\n",
+    "\n",
+    "# Manampilkan informasi dataset\n",
+    "print(f\"Informasi Dataset : \\n\")\n",
+    "print(df_final.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
