--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2795,10 +2795,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h2>20. Kesimpulan Data Science in Marketing: Customer Segmentation with Python</h2>\n",
+    "<ol>\n",
+    "  <li><strong>Cluster 0</strong> : Cluster Diamond Senior Enterpreneur Member berisi pelanggan dengan profesi <strong>Wiraswasta</strong>, rata rata usia <strong>52 - 54</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>9 - 10</strong> juta</li>\n",
+    "  <li><strong>Cluster 1</strong> : Cluster Gold Adults Freelance Member berisi pelanggan dengan profesi <strong>Professional & IRT</strong>, rata rata usia <strong>29 - 30</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>5</strong> juta</li>\n",
+    "  <li><strong>Cluster 2</strong> : Cluster Silver Young Student Member berisi pelanggan dengan profesi <strong>Pelajar & Mahasiswa</strong>, rata rata usia <strong>16</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>3</strong> juta</li>\n",
+    "  <li><strong>Cluster 3</strong> : Cluster Gold Senior Freelance Member berisi pelanggan dengan profesi <strong>Professional & IRT</strong>, rata rata usia <strong>52 - 54</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>5</strong> juta</li>\n",
+    "  <li><strong>Cluster 4</strong> : Cluster Diamond Adults Enterpreneur Member berisi pelanggan dengan profesi <strong>Wiraswasta</strong>, rata rata usia <strong>30</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>10</strong> juta</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
