Tips git add .! dalam pemodelan untuk Clustering Data

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2805,7 +2805,19 @@
     "  <li><strong>Cluster 2</strong> : Cluster Silver Young Student Member berisi pelanggan dengan profesi <strong>Pelajar & Mahasiswa</strong>, rata rata usia <strong>16</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>3</strong> juta</li>\n",
     "  <li><strong>Cluster 3</strong> : Cluster Gold Senior Freelance Member berisi pelanggan dengan profesi <strong>Professional & IRT</strong>, rata rata usia <strong>52 - 54</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>5</strong> juta</li>\n",
     "  <li><strong>Cluster 4</strong> : Cluster Diamond Adults Enterpreneur Member berisi pelanggan dengan profesi <strong>Wiraswasta</strong>, rata rata usia <strong>30</strong> tahun serta rata - rata Nilai Belanja Setahun <strong>10</strong> juta</li>\n",
-    "</ol>"
+    "</ol>\n",
+    "<h4>=====================================================================================================================================</h4>\n",
+    "<ul>\n",
+    "  <h3><strong>Tips !!!</strong></h3>\n",
+    "  <li>Penentuan jumlah cluster yang optimal bisa menggunakan matrix evaluasi sebagi berikut :</li>\n",
+    "    <ol>\n",
+    "      <li>Elbow Method</li>\n",
+    "      <li>Sillhoute Score</li>\n",
+    "      <li>Callinski-Harabaz Score</li>\n",
+    "    </ol>\n",
+    "  <li>Penentuan jumlah cluster yang optimal memerlukan <strong>Masuk dari TIM</strong></li>\n",
+    "  <li>Tantangan lainnya adalah semakin banyak jumlah dataset akan semakin lama dalam proses penentuan jumlah cluster</li>\n",
+    "</ul>"
    ]
   },
   {
