Mempersiapkan Data Baru

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2823,7 +2823,106 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h2>Pendahuluan: Penggunaan Model Untuk Data Baru</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>21. Mempersiapkan Data Baru</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Baru : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Nama Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CUST-100</td>\n",
+       "      <td>Joko</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>8230000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Customer_ID Nama Pelanggan Jenis Kelamin  Umur     Profesi Tipe Residen  \\\n",
+       "0    CUST-100           Joko          Pria    45  Wiraswasta      Cluster   \n",
+       "\n",
+       "   NilaiBelanjaSetahun  \n",
+       "0              8230000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Data Baru\n",
+    "data = [{\n",
+    "  \"Customer_ID\": \"CUST-100\",\n",
+    "  \"Nama Pelanggan\": \"Joko\",\n",
+    "  \"Jenis Kelamin\": \"Pria\",\n",
+    "  \"Umur\": 45,\n",
+    "  \"Profesi\": \"Wiraswasta\",\n",
+    "  \"Tipe Residen\": \"Cluster\",\n",
+    "  \"NilaiBelanjaSetahun\": 8230000\n",
+    "}]\n",
+    "\n",
+    "# Membuat Dataframe Baru\n",
+    "new_df = pd.DataFrame(data)\n",
+    "\n",
+    "# Melihat Data Baru\n",
+    "print(f\"Data Baru : \\n\")\n",
+    "display(new_df)"
+   ]
   }
  ],
  "metadata": {
