Membuat Fungsi Data Pemrosesan Data

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -2836,7 +2836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2923,6 +2923,162 @@
     "print(f\"Data Baru : \\n\")\n",
     "display(new_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>22. Membuat Fungsi Data Pemrosesan</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Baru Setelah Dipreprocess : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.510204</td>\n",
+       "      <td>0.447818</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Jenis Kelamin  Profesi  Tipe Residen      Umur  NilaiBelanjaSetahun\n",
+       "0              0        4             0  0.510204             0.447818"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Membuat fungsi data_preprocess\n",
+    "def data_preprocess(data):\n",
+    "  # Kolom Kategorikal\n",
+    "  kolom_kategorikal = ['Jenis Kelamin', 'Profesi', 'Tipe Residen']\n",
+    "  \n",
+    "  # Kolom Numerik\n",
+    "  kolom_numerik = ['Umur', 'NilaiBelanjaSetahun']\n",
+    "\n",
+    "  # Konversi Kolom Kategorikal\n",
+    "  data_encode = data[kolom_kategorikal].copy()\n",
+    "  # Jenis Kelamin\n",
+    "  data_encode['Jenis Kelamin'] = data_encode['Jenis Kelamin'].map({\n",
+    "      'Pria': 0,\n",
+    "      'Wanita': 1\n",
+    "  })\n",
+    "  # Professi\n",
+    "  data_encode['Profesi'] = data_encode['Profesi'].map({\n",
+    "      'Ibu Rumah Tangga': 0,\n",
+    "      'Mahasiswa': 1,\n",
+    "      'Pelajar': 2,\n",
+    "      'Professional': 3,\n",
+    "      'Wiraswasta': 4\n",
+    "  })\n",
+    "  # Tipe Residen\n",
+    "  data_encode['Tipe Residen'] = data_encode['Tipe Residen'].map({\n",
+    "      'Cluster': 0,\n",
+    "      'Sector': 1\n",
+    "  })\n",
+    "\n",
+    "  # Standardisasi Kolom Numerik\n",
+    "  data_std = data[kolom_numerik].copy()\n",
+    "  # Standaisasi Kolom Umur\n",
+    "  data_std['Umur'] = (data_std['Umur'] - 37.5) / 14.7\n",
+    "  # Standarisasi Kolom Nilai Belanja Setahun\n",
+    "  data_std['NilaiBelanjaSetahun'] = (data_std['NilaiBelanjaSetahun'] - 7069874.8) / 2590619.0\n",
+    "\n",
+    "  # Menggabungkan Data\n",
+    "  data_model = pd.concat([data_encode, data_std], axis=1)\n",
+    "\n",
+    "  # Return data_model\n",
+    "  return data_model\n",
+    "\n",
+    "# Menjalankan fungsi data_preprocess\n",
+    "data_baru = data_preprocess(new_df)\n",
+    "\n",
+    "# Menampilkan Data Baru\n",
+    "print(f\"Data Baru Setelah Dipreprocess : \\n\")\n",
+    "display(data_baru)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Membuat fungsi untuk menentukan segmen pelanggan\n",
+    "# def menentukan_segmen(df, model):\n",
+    "#     # Melakukan prediksi cluster\n",
+    "#     cluster = model.predict(df, categorical=categorical_columns)\n",
+    "    \n",
+    "#     # Mengembalikan nama segmen\n",
+    "#     segmen = []\n",
+    "#     for i in cluster:\n",
+    "#         if i == 0:\n",
+    "#             segmen.append('Diamond Senior Enterpreneur Member')\n",
+    "#         elif i == 1:\n",
+    "#             segmen.append('Gold Adults Freelance Member')\n",
+    "#         elif i == 2:\n",
+    "#             segmen.append('Silver Young Student Member')\n",
+    "#         elif i == 3:\n",
+    "#             segmen.append('Gold Senior Freelance Member')\n",
+    "#         elif i == 4:\n",
+    "#             segmen.append('Diamond Adults Enterpreneur Member')\n",
+    "    \n",
+    "#     return segmen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
