Memanggil Model dan Melakukan Prediksi

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -3046,6 +3046,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>23. Memanggil Model & Melakukan Prediksi</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil Prediksi Clustering : 0\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Membuat Fungsi Modelling\n",
+    "def modelling(data):\n",
+    "  # Load Model\n",
+    "  model = pickle.load(open('cluster_model.pkl', 'rb'))\n",
+    "\n",
+    "  # Melakukan Prediksi\n",
+    "  clusters = model.predict(data, categorical=[0, 1, 2])\n",
+    "\n",
+    "  # Return Clusters\n",
+    "  return clusters\n",
+    "\n",
+    "# Menjalankan Fungsi Modelling\n",
+    "clusters = modelling(data_baru)\n",
+    "\n",
+    "# Menampilkan hasil modelling\n",
+    "print(f\"Hasil Prediksi Clustering : {clusters[0]}\")\n",
+    "print(clusters)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
