Menamakan Segmen Untuk Data Baru

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -3087,31 +3087,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # Membuat fungsi untuk menentukan segmen pelanggan\n",
-    "# def menentukan_segmen(df, model):\n",
-    "#     # Melakukan prediksi cluster\n",
-    "#     cluster = model.predict(df, categorical=categorical_columns)\n",
-    "    \n",
-    "#     # Mengembalikan nama segmen\n",
-    "#     segmen = []\n",
-    "#     for i in cluster:\n",
-    "#         if i == 0:\n",
-    "#             segmen.append('Diamond Senior Enterpreneur Member')\n",
-    "#         elif i == 1:\n",
-    "#             segmen.append('Gold Adults Freelance Member')\n",
-    "#         elif i == 2:\n",
-    "#             segmen.append('Silver Young Student Member')\n",
-    "#         elif i == 3:\n",
-    "#             segmen.append('Gold Senior Freelance Member')\n",
-    "#         elif i == 4:\n",
-    "#             segmen.append('Diamond Adults Enterpreneur Member')\n",
-    "    \n",
-    "#     return segmen"
+    "<h2>24. Menamakan Segmen</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Baru dengan Segmen : \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Nama Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Umur</th>\n",
+       "      <th>Profesi</th>\n",
+       "      <th>Tipe Residen</th>\n",
+       "      <th>NilaiBelanjaSetahun</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>segmen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CUST-100</td>\n",
+       "      <td>Joko</td>\n",
+       "      <td>Pria</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Wiraswasta</td>\n",
+       "      <td>Cluster</td>\n",
+       "      <td>8230000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Diamond Senior Enterpreneur Member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Customer_ID Nama Pelanggan Jenis Kelamin  Umur     Profesi Tipe Residen  \\\n",
+       "0    CUST-100           Joko          Pria    45  Wiraswasta      Cluster   \n",
+       "\n",
+       "   NilaiBelanjaSetahun  cluster                              segmen  \n",
+       "0              8230000        0  Diamond Senior Enterpreneur Member  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Membuat Fungsi Menamakan Segmen\n",
+    "def menamakan_segmen(data_asli, clusters):\n",
+    "\n",
+    "  # Menggabungkan Cluster dan Data Asli\n",
+    "  data_final = data_asli.copy()\n",
+    "  # Menamakan Cluster\n",
+    "  data_final['cluster'] = clusters\n",
+    "\n",
+    "  # Mapping Segmen\n",
+    "  data_final['segmen'] = data_final['cluster'].map({\n",
+    "      0: 'Diamond Senior Enterpreneur Member',\n",
+    "      1: 'Gold Adults Freelance Member',\n",
+    "      2: 'Silver Young Student Member',\n",
+    "      3: 'Gold Senior Freelance Member',\n",
+    "      4: 'Diamond Adults Enterpreneur Member'\n",
+    "  })\n",
+    "\n",
+    "  # Return data_asli\n",
+    "  return data_final\n",
+    "\n",
+    "# Menjalankan Fungsi Menamakan Segmen\n",
+    "data_baru_dengan_segmen = menamakan_segmen(new_df, clusters)\n",
+    "\n",
+    "# Menampilkan Data Baru dengan Segmen\n",
+    "print(f\"Data Baru dengan Segmen : \\n\")\n",
+    "display(data_baru_dengan_segmen)"
    ]
   },
   {
