Analisa Hasil Visualisasi Antara Feature 0 & Feature 1

--- a/machine_learning_algoritma_k_means_dengan_python.ipynb
+++ b/machine_learning_algoritma_k_means_dengan_python.ipynb
@@ -209,6 +209,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3>Analisa Hasil Visualisasi Antara Feature 0 & Feature 1</h3>\n",
+    "<ul>\n",
+    "  <li>Data tersebar dari -10 hingga 10 pada kedua sumbu, ini menunjukan variasi yang cukup besar dalam dataset</li>\n",
+    "  <li>Data dibagi menjadi 3 kelompok besar atau cluster, ini menunjukan bahwa ada 3 kelompok berbeda berdasarkan fitur yang diamati</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2></h2>"
    ]
   }
